@@ -4,6 +4,7 @@ Pending changes in the mainline
 * Download ZIP + DICOMDIR from Orthanc Explorer
 * Sample plugin framework to serve static resources
 * Fix issue 21 (Microsoft Visual Studio precompiled headers)
+* Fix issue 22 (Error decoding multi-frame instances)
 
 
 Version 0.8.4 (2014/09/19)
